--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>AngularJS Learning</title>
     </head>
     <body>
-        <h1>Hello AngularJddS!</h1>
+        <h1>First Angular Project</h1>
     </body>
 </htmnl>
